--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "clarifai-nodejs-grpc": "^8.0.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1"
   }
