--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "clarifai-nodejs-grpc": "^8.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1"
   }
