--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clarifai-nodejs-grpc": "^8.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "pg": "^8.8.0"
   }
 }
