--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start-dev": "nodemon src/index.js",
+    "populate": "node src/scrips/populate.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
