finished base script, fixed bug by importing dotenv

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "start-dev": "nodemon src/index.js",
-    "populate": "node src/scrips/populate.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "populate": "node src/scripts/populate.js"
   },
   "repository": {
     "type": "git",
